Initial pass at database

--- a/solshen-install-history/res/values/strings.xml
+++ b/solshen-install-history/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="hello">Hello World, InstallHistoryActivity!</string>
     <string name="app_name">Android-install-history</string>
+    <string name="history_provider">Install History Provider</string>
 </resources>
