Fixing unit testing

--- a/solshen-install-history/res/values/strings.xml
+++ b/solshen-install-history/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="hello">Hello World, InstallHistoryActivity!</string>
-    <string name="app_name">Android-install-history</string>
+    <string name="app_name">Install History</string>
     <string name="history_provider">Install History Provider</string>
+
 </resources>
